src/test/contracts/negative/interpreter_tests/test_run_types3.jsligo
import Test = Test.Next;

const foo = (x: int): int => {return x};
const bar = Test.Michelson.run(foo, {field: "toto"});
